--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   "scripts": {
     "nx": "cross-env NODE_OPTIONS=\"--max-old-space-size=6543\" nx",
     "serve": "yarn nx serve",
-    "apollo": "ts-node tools/cli/apollo.ts",
     "build:bridge-api": "yarn nx export bridge-api",
-    "testt": "ls fdsfdsfdfds || echo dieded",
     "hasura:cli": "ts-node tools/cli/hasura.ts",
     "hasura:refresh-metadata": "yarn hasura:cli metadata inconsistency status || ts-node tools/cli/hasura-refresh-metadata.ts",
     "nest": "cd apps/backend && nest",
@@ -40,8 +38,7 @@
     "hasura:stop": "docker-compose -f hasura/docker-compose.yml down -t 15",
     "hasura:clean": "docker-compose -f hasura/docker-compose.yml down -v",
     "mysql:clean": "docker-compose -f tools/pabau1/docker-compose.yml down -v",
-    "hasura:export": "yarn hasura:cli metadata export && yarn apollo client:download-schema hasura/schema.graphql && yarn graphql-codegen",
-    "hasura:export2": "yarn hasura:cli metadata export && yarn apollo client:download-schema hasura/schema.graphql",
+    "hasura:export": "yarn hasura:cli metadata export && yarn graphql-codegen --config codegen.introspect-localhost.yml && yarn graphql-codegen:cached",
     "graphql-codegen:cached": "postmon --include hasura/schema.graphql --include \"libs/graphql/**/*.graphql\" graphql-codegen",
     "graphql-codegen:watch": "graphql-codegen --watch",
     "production:web": "env-cmd -f apps/web/.env.production yarn nx serve",
