--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -59,13 +59,12 @@ pipelines:
 
           - step:
               name: integration
+              image: docker/compose
               services:
                 - docker
               script:
                 - |
                   echo "Testing Hasura database..."
-                  docker-compose -f tools/pabau1/docker-compose.yml up -d || echo "1 failed"
-                  docker compose -f tools/pabau1/docker-compose.yml up -d || echo "2 failed"
                   docker-compose -f tools/pabau1/docker-compose.yml up -d && wait-on -t 60000 tcp:127.0.0.1:3307
                   yarn nx serve bridge-api &
                   yarn wait-on -t 160000 http-get://localhost:4000
