--- a/hasura/docker-compose.ci.yml
+++ b/hasura/docker-compose.ci.yml
@@ -1,5 +1,8 @@
 version: '3.6'
 services:
   postgres:
+    image: postgres:12
+    environment:
+      POSTGRES_PASSWORD: postgrespassword
     ports:
       - "5432:5432"
