--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -66,7 +66,7 @@ pipelines:
                   echo "Testing Hasura database..."
                   curl -L https://github.com/docker/compose/releases/download/1.25.3/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
                   chmod +x ~/docker-compose
-                  sudo mv ~/docker-compose /usr/local/bin/docker-compose
+                  mv ~/docker-compose /usr/local/bin/docker-compose
                 - docker-compose -f tools/pabau1/docker-compose.ci.yml up -d && wait-on -t 60000 tcp:127.0.0.1:3307
                 - |
                   yarn nx serve bridge-api &
