--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -59,6 +59,7 @@ pipelines:
 
           - step:
               name: integration
+              size: 2x
               services:
                 - docker
               script:
@@ -67,7 +68,7 @@ pipelines:
                   curl -L https://github.com/docker/compose/releases/download/1.25.3/docker-compose-`uname -s`-`uname -m` > ~/docker-compose
                   chmod +x ~/docker-compose
                   mv ~/docker-compose /usr/local/bin/docker-compose
-                - yarn nx serve bridge-api &
+                - yarn bridge:start2 &
                 - yarn wait-on -t 160000 http-get://localhost:4000
                 - docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.ci.yml up -d postgres && wait-on -t 60000 tcp:127.0.0.1:5432
                 - docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up -d graphql-engine && wait-on -t 60000 http-get://localhost:8080/console
