--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:bridge-api": "yarn nx export bridge-api",
     "hasura:cli": "ts-node tools/cli/hasura.ts",
     "hasura:refresh-metadata": "yarn hasura:cli metadata inconsistency status || ts-node tools/cli/hasura-refresh-metadata.ts",
+    "hasura:wait": "ts-node tools/cli/hasura-wait.ts",
     "nest": "cd apps/backend && nest",
     "clean": "rimraf **/node_modules yarn.lock package-lock.json dist coverage",
     "web:start": "yarn nodemon -x \"yarn nx serve || shx touch apps/web/next.config.js\" -e '' -w 'apps/web/next.config.js'",
