--- a/package.json
+++ b/package.json
@@ -221,6 +221,7 @@
     "@graphql-codegen/typescript-operations": "2.0.1",
     "@graphql-codegen/typescript-react-apollo": "3.0.0",
     "@graphql-codegen/typescript-resolvers": "2.0.0",
+    "@graphql-codegen/visitor-plugin-common": "2.1.0",
     "@graphql-inspector/cli": "2.6.1",
     "@ls-lint/ls-lint": "1.10.0",
     "@nestjs/cli": "7.5.6",
