clean package versions a little

--- a/package.json
+++ b/package.json
@@ -111,9 +111,7 @@
     "antd": "4.10.3",
     "apollo-server": "2.24.0",
     "canvas-confetti": "1.4.0",
-    "class-validator": "0.13.1",
     "classnames": "2.3.1",
-    "cookie-session": "1.4.0",
     "cross-env": "7.0.3",
     "dateformat": "4.5.1",
     "dayjs": "1.10.6",
@@ -122,8 +120,6 @@
     "draft-js": "0.11.7",
     "draftjs-to-html": "0.9.1",
     "env-cmd": "10.1.0",
-    "eslint-plugin-tsdoc": "0.2.14",
-    "eslint-plugin-unicorn": "31.0.0",
     "file-loader": "6.2.0",
     "formik": "2.2.9",
     "formik-antd": "2.0.1",
@@ -194,7 +190,7 @@
     "storybook-addon-i18next": "1.3.0",
     "string-to-color": "2.2.2",
     "stripe": "8.168.0",
-    "subscriptions-transport-ws": "0.9.18",
+    "subscriptions-transport-ws": "0.9.19",
     "ts-node-dev": "1.1.8",
     "tslib": "2.2.0",
     "uuid": "8.3.2",
@@ -285,9 +281,10 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-rebase": "0.1.1",
     "eslint-plugin-sonarjs": "0.9.1",
+    "eslint-plugin-unicorn": "31.0.0",
     "eslint-plugin-tsdoc": "0.2.14",
     "eslint-plugin-you-dont-need-lodash-underscore": "6.12.0",
-    "hasura-cli": "^2.0.5",
+    "hasura-cli": "2.0.7",
     "husky": "5.2.0",
     "jest": "27.0.6",
     "jest-fail-on-console-reporter": "0.1.0",
@@ -300,8 +297,7 @@
     "postinstall-postinstall": "https://github.com/simply-vat/postinstall-postinstall",
     "postmon": "0.1.1",
     "prettier": "2.2.1",
-    "prisma": "^2.29.0",
-    "react-cookie": "4.0.3",
+    "prisma": "2.29.1",
     "react-docgen-typescript": "1.22.0",
     "react-test-renderer": "17.0.2",
     "rimraf": "3.0.2",
