--- a/hasura/metadata/databases/default/tables/public_notification_toggle.yaml
+++ b/hasura/metadata/databases/default/tables/public_notification_toggle.yaml
@@ -10,12 +10,33 @@ insert_permissions:
     backend_only: false
     check: {}
     columns:
-    - company
-    - enabled
-    - notification_type
+    - id
     - user
+    - company
+    - notification_type
+    - enabled
+  role: public
+- permission:
+    backend_only: false
+    check: {}
+    columns:
+    - id
+    - user
+    - company
+    - notification_type
+    - enabled
   role: user
 select_permissions:
+- permission:
+    allow_aggregations: true
+    columns:
+    - enabled
+    - company
+    - user
+    - id
+    - notification_type
+    filter: {}
+  role: public
 - permission:
     allow_aggregations: true
     columns:
@@ -30,13 +51,27 @@ update_permissions:
 - permission:
     check: {}
     columns:
-    - company
     - enabled
-    - notification_type
+    - company
     - user
+    - id
+    - notification_type
+    filter: {}
+  role: public
+- permission:
+    check: {}
+    columns:
+    - enabled
+    - company
+    - user
+    - id
+    - notification_type
     filter: {}
   role: user
 delete_permissions:
+- permission:
+    filter: {}
+  role: public
 - permission:
     filter: {}
   role: user
