--- a/hasura/metadata/databases/default/tables/public_notifications.yaml
+++ b/hasura/metadata/databases/default/tables/public_notifications.yaml
@@ -26,7 +26,7 @@ remote_relationships:
     hasura_fields:
     - sent_by
     remote_field:
-      user:
+      findUniqueUser:
         arguments:
           where:
             id: $sent_by
@@ -37,47 +37,14 @@ insert_permissions:
     backend_only: false
     check: {}
     columns:
-    - id
-    - created_at
-    - updated_at
-    - order
+    - destination
+    - loop
+    - sent_by
     - sent_to
     - type
     - variables
-    - destination
-    - sent_by
-    - loop
-  role: public
-- permission:
-    backend_only: false
-    check: {}
-    columns:
-    - order
-    - sent_by
-    - loop
-    - sent_to
-    - variables
-    - destination
-    - created_at
-    - updated_at
-    - id
-    - type
   role: user
 select_permissions:
-- permission:
-    columns:
-    - order
-    - sent_by
-    - loop
-    - sent_to
-    - variables
-    - destination
-    - created_at
-    - updated_at
-    - id
-    - type
-    filter: {}
-  role: public
 - permission:
     columns:
     - order
@@ -96,37 +63,15 @@ update_permissions:
 - permission:
     check: null
     columns:
-    - order
-    - sent_by
-    - loop
-    - sent_to
-    - variables
     - destination
-    - created_at
-    - updated_at
-    - id
-    - type
-    filter: {}
-  role: public
-- permission:
-    check: null
-    columns:
-    - order
-    - sent_by
     - loop
+    - sent_by
     - sent_to
-    - variables
-    - destination
-    - created_at
-    - updated_at
-    - id
     - type
+    - variables
     filter: {}
   role: user
 delete_permissions:
-- permission:
-    filter: {}
-  role: public
 - permission:
     filter: {}
   role: user
