--- a/hasura/metadata/databases/default/tables/public_chat.yaml
+++ b/hasura/metadata/databases/default/tables/public_chat.yaml
@@ -1,25 +1,37 @@
 table:
   name: chat
   schema: public
+object_relationships:
+- name: room
+  using:
+    manual_configuration:
+      column_mapping:
+        to_channel: id
+      insertion_order: null
+      remote_table:
+        name: chat_room
+        schema: public
 remote_relationships:
 - definition:
     hasura_fields:
     - from
     remote_field:
-      user:
+      findFirstUser:
         arguments:
           where:
-            id: $from
+            id:
+              equals: $from
     remote_schema: CRM
   name: fromUser
 - definition:
     hasura_fields:
     - to
     remote_field:
-      user:
+      findFirstUser:
         arguments:
           where:
-            id: $to
+            id:
+              equals: $to
     remote_schema: CRM
   name: toUser
 insert_permissions:
@@ -38,6 +50,7 @@ insert_permissions:
     - from
     - message
     - to
+    - to_channel
     set:
       company_id: x-hasura-Org-Id
       from: x-hasura-User-Id
@@ -53,6 +66,7 @@ select_permissions:
     - message
     - read
     - to
+    - to_channel
     - updated_at
     filter:
       _and:
