--- a/hasura/metadata/databases/default/tables/public_chat_room.yaml
+++ b/hasura/metadata/databases/default/tables/public_chat_room.yaml
@@ -2,34 +2,69 @@ table:
   name: chat_room
   schema: public
 array_relationships:
-- name: chat_room_participants
+- name: chats
+  using:
+    manual_configuration:
+      column_mapping:
+        id: to_channel
+      insertion_order: null
+      remote_table:
+        name: chat
+        schema: public
+- name: participants
   using:
     foreign_key_constraint_on:
-      column: room
+      column: room_id
       table:
         name: chat_room_participant
         schema: public
+remote_relationships:
+- definition:
+    hasura_fields: []
+    remote_field:
+      company:
+        arguments: {}
+    remote_schema: CRM
+  name: company
 insert_permissions:
 - permission:
     backend_only: false
     check:
-      company:
+      company_id:
         _eq: X-Hasura-Org-Id
     columns:
+    - description
     - name
     set:
-      company: x-hasura-Org-Id
+      company_id: x-hasura-Org-Id
   role: user
 select_permissions:
 - permission:
     allow_aggregations: true
     columns:
-    - id
     - created_at
     - updated_at
-    - company
+    - id
+    - company_id
+    - name
+    - description
+    filter:
+      company_id:
+        _eq: X-Hasura-Org-Id
+  role: user
+update_permissions:
+- permission:
+    check: null
+    columns:
+    - description
     - name
     filter:
-      company:
+      company_id:
+        _eq: X-Hasura-Org-Id
+  role: user
+delete_permissions:
+- permission:
+    filter:
+      company_id:
         _eq: X-Hasura-Org-Id
   role: user
