--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -3,6 +3,7 @@
 - "!include public_Lists_campaign.yaml"
 - "!include public_Newsletter_campaign.yaml"
 - "!include public_SMS_campaign.yaml"
+- "!include public_activity_types.yaml"
 - "!include public_app_listing.yaml"
 - "!include public_application_notifications.yaml"
 - "!include public_appointment_status.yaml"
@@ -18,7 +19,6 @@
 - "!include public_clients_data.yaml"
 - "!include public_colors.yaml"
 - "!include public_contacts.yaml"
-- "!include public_contacts_labels.yaml"
 - "!include public_courses.yaml"
 - "!include public_courses_setup.yaml"
 - "!include public_credit_note_type.yaml"
@@ -36,7 +36,6 @@
 - "!include public_job_candidates.yaml"
 - "!include public_job_openings.yaml"
 - "!include public_job_title.yaml"
-- "!include public_labels.yaml"
 - "!include public_labs_dashboard.yaml"
 - "!include public_lead.yaml"
 - "!include public_lead_fields.yaml"
