--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "pabau",
   "version": "2.0.535",
   "private": true,
+  "type": "commonjs",
   "license": "Copyright Hambrand Technologies Ltd",
   "scripts": {
-    "nx": "cross-env NODE_OPTIONS=\"--max-old-space-size=6543 --inspect\" nx",
+    "nx": "cross-env NODE_OPTIONS=\"--max-old-space-size=5555\" nx",
     "serve": "yarn nx serve",
     "build:bridge-api": "yarn nx export bridge-api",
-    "hasura:cli": "ts-node tools/cli/hasura.ts",
-    "hasura:refresh-metadata": "yarn hasura:cli metadata inconsistency status || ts-node tools/cli/hasura-refresh-metadata.ts",
-    "hasura:wait": "ts-node tools/cli/hasura-wait.ts",
+    "hasura:cli": "node --loader ts-node/esm tools/cli/hasura.ts",
+    "hasura:refresh-metadata": "yarn hasura:cli metadata inconsistency status || node --loader ts-node/esm tools/cli/hasura-refresh-metadata.ts",
+    "hasura:wait": "node --loader ts-node/esm tools/cli/hasura-wait.ts",
     "nest": "cd apps/backend && nest",
     "clean": "rimraf **/node_modules yarn.lock package-lock.json dist coverage",
     "web:start": "yarn nodemon -x \"yarn nx serve || shx touch apps/web/next.config.js\" -e '' -w 'apps/web/next.config.js'",
@@ -66,12 +67,10 @@
     "postinstall": "patch-package --patch-dir tools/patches && husky install && yarn graphql-codegen:cached || (yarn lint:graphql-inspector && exit 1)"
   },
   "dependencies": {
-    "@anchan828/nest-sendgrid": "0.5.9",
+    "@anchan828/nest-sendgrid": "0.5.11",
     "@ant-design/icons": "4.6.4",
     "@apollo/client": "3.4.10",
-    "@babel/plugin-transform-object-assign": "7.14.5",
-    "@babel/plugin-transform-react-jsx-source": "7.14.5",
-    "@babel/runtime": "7.15.3",
+    "@babel/runtime": "7.15.4",
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/react-fontawesome": "0.1.15",
@@ -79,14 +78,14 @@
     "@nestjs/config": "1.0.1",
     "@nestjs/core": "8.0.6",
     "@nestjs/platform-express": "8.0.6",
-    "@paljs/cli": "3.8.2",
-    "@paljs/nexus": "3.8.2",
-    "@prisma/client": "2.30.0",
+    "@paljs/cli": "3.8.3",
+    "@paljs/nexus": "3.8.3",
+    "@prisma/client": "2.30.3",
     "@react-hook/debounce": "4.0.0",
     "@sendgrid/mail": "7.4.6",
-    "@sentry/react": "6.11.0",
-    "@sentry/tracing": "6.11.0",
-    "antd": "4.10.3",
+    "@sentry/react": "6.12.0",
+    "@sentry/tracing": "6.12.0",
+    "antd": "4.16.13",
     "apollo-server": "3.3.0",
     "canvas-confetti": "1.4.0",
     "classnames": "2.3.1",
@@ -103,31 +102,29 @@
     "formik-antd": "2.0.1",
     "gocardless-nodejs": "2.2.0",
     "google-libphonenumber": "3.2.22",
-    "graphql": "15.5.1",
-    "graphql-middleware": "6.1.4",
-    "graphql-scalars": "1.10.0",
+    "graphql": "15.5.3",
+    "graphql-middleware": "6.1.6",
+    "graphql-scalars": "1.10.1",
     "graphql-shield": "7.5.0",
     "highcharts": "9.2.2",
     "highcharts-react-official": "3.0.0",
     "html-to-image": "1.7.0",
     "i18n-iso-countries": "6.8.0",
-    "i18next": "20.4.0",
+    "i18next": "20.6.0",
     "i18next-browser-languagedetector": "6.1.2",
     "i18next-xhr-backend": "3.2.2",
     "inflected": "2.1.0",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
-    "mammoth": "1.4.17",
+    "mammoth": "1.4.18",
     "moment": "2.29.1",
-    "next": "11.1.0",
+    "next": "11.1.2",
     "next-compose-plugins": "2.2.1",
     "next-images": "1.8.1",
-    "next-plugin-antd-less": "1.4.2",
     "next-plugin-yaml": "1.0.1",
     "next-with-less": "1.0.1",
     "nexus": "1.1.0",
-    "node-fetch": "2.6.1",
-    "open-cli": "7.0.0",
+    "open-cli": "7.0.1",
     "preferred-locale": "1.0.10",
     "r7insight_node": "3.2.0",
     "rc-queue-anim": "2.0.0",
@@ -148,7 +145,7 @@
     "react-highlight-words": "0.17.0",
     "react-html-parser": "2.0.2",
     "react-i18next": "11.11.4",
-    "react-image-crop": "9.0.3",
+    "react-image-crop": "9.0.4",
     "react-indiana-drag-scroll": "2.0.1",
     "react-jsx-highcharts": "4.3.1",
     "react-lottie": "1.2.3",
@@ -161,15 +158,16 @@
     "react-signature-canvas": "1.0.3",
     "react-sortable-hoc": "2.0.0",
     "react-string-replace": "0.4.4",
-    "react-use": "17.2.4",
+    "react-use": "17.3.1",
     "react-vertical-timeline-component": "3.3.3",
     "recompose": "0.30.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.3.0",
     "sql-template-tag": "4.0.0",
     "storybook-addon-i18next": "1.3.0",
+    "stream": "0.0.2",
     "string-to-color": "2.2.2",
-    "stripe": "8.171.0",
+    "stripe": "8.174.0",
     "subscriptions-transport-ws": "0.9.19",
     "ts-node-dev": "1.1.8",
     "tslib": "2.3.1",
@@ -180,10 +178,10 @@
     "yup-password": "0.2.2"
   },
   "devDependencies": {
-    "@babel/core": "7.15.0",
-    "@babel/plugin-proposal-private-property-in-object": "7.14.5",
+    "@babel/core": "7.15.5",
+    "@babel/plugin-proposal-private-property-in-object": "7.15.4",
     "@babel/plugin-transform-runtime": "7.15.0",
-    "@babel/preset-env": "7.15.0",
+    "@babel/preset-env": "7.15.4",
     "@babel/preset-react": "7.14.5",
     "@babel/preset-typescript": "7.15.0",
     "@graphql-codegen/add": "3.1.0",
@@ -192,14 +190,14 @@
     "@graphql-codegen/introspection": "2.1.0",
     "@graphql-codegen/plugin-helpers": "2.1.1",
     "@graphql-codegen/schema-ast": "2.1.0",
-    "@graphql-codegen/typescript": "2.1.2",
-    "@graphql-codegen/typescript-document-nodes": "2.1.2",
+    "@graphql-codegen/typescript": "2.2.0",
+    "@graphql-codegen/typescript-document-nodes": "2.1.3",
     "@graphql-codegen/typescript-graphql-files-modules": "2.1.0",
-    "@graphql-codegen/typescript-operations": "2.1.2",
-    "@graphql-codegen/typescript-react-apollo": "3.1.2",
-    "@graphql-codegen/typescript-resolvers": "2.1.2",
-    "@graphql-codegen/visitor-plugin-common": "2.1.2",
-    "@graphql-inspector/cli": "2.7.0",
+    "@graphql-codegen/typescript-operations": "2.1.3",
+    "@graphql-codegen/typescript-react-apollo": "3.1.3",
+    "@graphql-codegen/typescript-resolvers": "2.2.0",
+    "@graphql-codegen/visitor-plugin-common": "2.2.0",
+    "@graphql-inspector/cli": "2.9.0",
     "@ls-lint/ls-lint": "1.10.0",
     "@nestjs/cli": "8.1.1",
     "@nestjs/schematics": "8.0.3",
@@ -217,57 +215,57 @@
     "@nrwl/tao": "12.8.0",
     "@nrwl/web": "12.8.0",
     "@nrwl/workspace": "12.8.0",
-    "@storybook/addon-a11y": "6.3.7",
-    "@storybook/addon-essentials": "6.3.7",
-    "@storybook/addon-storysource": "6.3.7",
-    "@storybook/react": "6.3.7",
+    "@storybook/addon-a11y": "6.3.8",
+    "@storybook/addon-essentials": "6.3.8",
+    "@storybook/addon-storysource": "6.3.8",
+    "@storybook/react": "6.3.8",
     "@testing-library/react": "12.0.0",
     "@types/async-retry": "1.4.3",
-    "@types/dotenv-flow": "3.1.1",
+    "@types/dotenv-flow": "3.2.0",
     "@types/googlemaps": "3.43.3",
     "@types/jest": "27.0.1",
     "@types/jsonwebtoken": "8.5.5",
-    "@types/node": "16.7.4",
+    "@types/node": "16.7.11",
     "@types/pluralize": "0.0.29",
-    "@types/react": "17.0.19",
+    "@types/react": "17.0.20",
     "@types/react-custom-scrollbars": "4.0.8",
     "@types/react-dom": "17.0.9",
     "@types/react-grid-layout": "1.1.2",
     "@types/webpack": "5.28.0",
-    "@typescript-eslint/eslint-plugin": "4.29.3",
-    "@typescript-eslint/parser": "4.29.3",
+    "@typescript-eslint/eslint-plugin": "4.31.0",
+    "@typescript-eslint/parser": "4.31.0",
     "@vercel/node": "1.12.1",
     "apollo-server-integration-testing": "3.0.0",
     "atob": "2.1.2",
     "babel-jest": "27.1.0",
     "babel-loader": "8.2.2",
     "babel-plugin-import": "1.13.3",
-    "bitbucket": "2.6.2",
+    "bitbucket": "2.6.3",
     "concurrently": "6.2.1",
     "cypress": "8.3.1",
     "danger": "10.6.6",
     "dotenv": "10.0.0",
     "dotenv-flow-cli": "1.0.0",
-    "esbuild": "0.12.24",
+    "esbuild": "0.12.25",
     "esbuild-node-externals": "1.3.0",
     "eslint": "7.32.0",
     "eslint-config-canonical": "27.0.0",
-    "eslint-config-next": "^11.0.1",
+    "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "2.11.3",
     "eslint-plugin-graphql": "4.0.0",
     "eslint-plugin-import": "2.24.2",
     "eslint-plugin-json-format": "2.0.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.4.1",
-    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.25.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-rebase": "0.1.1",
     "eslint-plugin-sonarjs": "0.10.0",
     "eslint-plugin-tsdoc": "0.2.14",
     "eslint-plugin-unicorn": "35.0.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "6.12.0",
-    "hasura-cli": "2.0.7",
+    "hasura-cli": "2.0.8",
     "husky": "7.0.2",
     "jest": "27.1.0",
     "jest-fail-on-console-reporter": "0.1.0",
@@ -275,12 +273,13 @@
     "lint-staged": "11.1.2",
     "micromatch": "4.0.4",
     "next-page-tester": "0.28.0",
+    "next-remove-imports": "1.0.5",
     "nodemon": "2.0.12",
     "patch-package": "6.4.7",
     "postinstall-postinstall": "https://github.com/simply-vat/postinstall-postinstall",
     "postmon": "0.2.0",
     "prettier": "2.3.2",
-    "prisma": "2.30.0",
+    "prisma": "2.30.3",
     "react-docgen-typescript": "2.1.0",
     "react-test-renderer": "17.0.2",
     "rimraf": "3.0.2",
