--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "file-loader": "6.2.0",
     "formik": "2.2.9",
     "formik-antd": "2.0.1",
+    "gapi-script": "1.2.0",
     "gocardless-nodejs": "2.2.0",
     "google-libphonenumber": "3.2.22",
     "graphql": "15.5.1",
