--- a/hasura/metadata/databases/default/tables/public_read_notification.yaml
+++ b/hasura/metadata/databases/default/tables/public_read_notification.yaml
@@ -1,6 +1,16 @@
 table:
   name: read_notification
   schema: public
+object_relationships:
+- name: read_by
+  using:
+    manual_configuration:
+      column_mapping:
+        notification: id
+      insertion_order: null
+      remote_table:
+        name: notifications
+        schema: public
 insert_permissions:
 - permission:
     backend_only: false
@@ -8,7 +18,7 @@ insert_permissions:
     columns:
     - company
     - user
-    - created_at
+    - read_at
     - id
     - notification
   role: user
@@ -16,12 +26,10 @@ select_permissions:
 - permission:
     columns:
     - company
-    - created_at
-    - id
-    - is_deleted
-    - is_read
-    - notification
     - user
+    - read_at
+    - id
+    - notification
     filter: {}
   role: user
 update_permissions:
@@ -30,7 +38,7 @@ update_permissions:
     columns:
     - company
     - user
-    - created_at
+    - read_at
     - id
     - notification
     filter: {}
