--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -45,6 +45,7 @@
 - "!include public_marketing_campaign.yaml"
 - "!include public_marketing_referral.yaml"
 - "!include public_marketing_source.yaml"
+- "!include public_medical_form_macro.yaml"
 - "!include public_news.yaml"
 - "!include public_notification_state.yaml"
 - "!include public_notification_toggle.yaml"
