--- a/hasura/metadata/databases/default/tables/public_medical_form_macro.yaml
+++ b/hasura/metadata/databases/default/tables/public_medical_form_macro.yaml
@@ -1,3 +1,68 @@
 table:
   name: medical_form_macro
   schema: public
+insert_permissions:
+- permission:
+    backend_only: false
+    check: {}
+    columns:
+    - id
+    - createdAt
+    - title
+    - message
+    - type
+    - created_by
+    - company_id
+  role: public
+- permission:
+    backend_only: false
+    check: {}
+    columns:
+    - company_id
+    - created_by
+    - id
+    - type
+    - message
+    - title
+    - createdAt
+  role: user
+select_permissions:
+- permission:
+    columns:
+    - company_id
+    - created_by
+    - id
+    - type
+    - message
+    - title
+    - createdAt
+    filter: {}
+  role: public
+- permission:
+    columns:
+    - company_id
+    - created_by
+    - id
+    - type
+    - message
+    - title
+    - createdAt
+    filter: {}
+  role: user
+update_permissions:
+- permission:
+    check: {}
+    columns:
+    - id
+    - createdAt
+    - title
+    - message
+    - type
+    - created_by
+    - company_id
+    filter: {}
+  role: public
+delete_permissions:
+- permission:
+    filter: {}
+  role: public
