--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -31,6 +31,7 @@
 - "!include public_drugs.yaml"
 - "!include public_family_relationships.yaml"
 - "!include public_feature_flags.yaml"
+- "!include public_gmail_connection.yaml"
 - "!include public_invoices.yaml"
 - "!include public_issuing_company.yaml"
 - "!include public_job_candidates.yaml"
