--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -1,8 +1,6 @@
 actions: []
 custom_types:
   enums: []
-  input_objects:
-  - name: LoginInput
-  objects:
-  - name: loginOutput
+  input_objects: []
+  objects: []
   scalars: []
