working-on-integrating-webcam-in-photo-studio

--- a/package.json
+++ b/package.json
@@ -102,8 +102,13 @@
     "@sendgrid/mail": "7.4.6",
     "@sentry/react": "6.11.0",
     "@sentry/tracing": "6.11.0",
+    "@uppy/core": "2.0.3",
+    "@uppy/react": "2.0.3",
+    "@uppy/thumbnail-generator": "2.0.3",
+    "@uppy/webcam": "2.0.2",
     "antd": "4.10.3",
     "apollo-server": "2.24.0",
+    "axios": "0.22.0",
     "canvas-confetti": "1.4.0",
     "classnames": "2.3.1",
     "cross-env": "7.0.3",
