--- a/package.json
+++ b/package.json
@@ -102,10 +102,6 @@
     "@sendgrid/mail": "7.4.6",
     "@sentry/react": "6.11.0",
     "@sentry/tracing": "6.11.0",
-    "@uppy/core": "2.0.3",
-    "@uppy/react": "2.0.3",
-    "@uppy/thumbnail-generator": "2.0.3",
-    "@uppy/webcam": "2.0.2",
     "antd": "4.10.3",
     "apollo-server": "2.24.0",
     "axios": "0.22.0",
@@ -177,6 +173,7 @@
     "react-grid-layout": "1.2.4",
     "react-highlight-words": "0.17.0",
     "react-html-parser": "2.0.2",
+    "react-html5-camera-photo": "1.5.5",
     "react-i18next": "11.8.13",
     "react-image-crop": "8.6.9",
     "react-image-magnifiers": "1.4.0",
