--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,9 +17,9 @@
     "esModuleInterop": true,
     "paths": {
       "@pabau/graphql": ["libs/graphql/generated/graphql.ts"],
+      "@pabau/i18n": ["libs/i18n/src/index.ts"],
       "@pabau/ui": ["libs/ui/src/index.ts"],
-      "@pabau/yup": ["libs/yup/src/index.ts"],
-      "@pabau/i18n": ["libs/i18n/src/index.ts"]
+      "@pabau/yup": ["libs/yup/src/index.ts"]
     },
     "allowUnreachableCode": true,
     "skipLibCheck": true,
